<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homebackground">

    <TextView
        android:id="@+id/goToCategoriesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goToCategoriesTitle"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/HomeTitleTextSize"
        android:textStyle="bold"
        android:fontFamily="sans-serif"

        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.2" />

    <TextView
        android:id="@+id/goToCategoriesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goToCategoriesText"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/HomeTextTextSize"
        android:fontFamily="sans-serif"

        app:layout_constraintLeft_toLeftOf="@+id/goToCategoriesTitle"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/goToCategoriesTitle" />

    <TextView
        android:id="@+id/goToYearTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goToYearTitle"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/HomeTitleTextSize"
        android:textStyle="bold"
        android:fontFamily="sans-serif"

        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/goToYearText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goToYearText"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/HomeTextTextSize"
        android:fontFamily="sans-serif"

        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/goToYearTitle"
        app:layout_constraintLeft_toLeftOf="@+id/goToYearTitle" />


    <Button
        android:id="@+id/goToCategories"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="@drawable/custom_shape_all"
        android:text="GO"
        android:textSize="@dimen/HomeButtonTextSize"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:fontFamily="sans-serif"


        app:layout_constraintLeft_toLeftOf="@+id/goToCategoriesTitle"
        app:layout_constraintRight_toRightOf="@+id/goToCategoriesTitle"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/goToCategoriesText" />

    <Button
        android:id="@+id/goToYear"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="@drawable/custom_shape"
        android:text="GO"
        android:textSize="@dimen/HomeButtonTextSize"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:fontFamily="sans-serif"


        app:layout_constraintLeft_toLeftOf="@+id/goToYearTitle"
        app:layout_constraintRight_toRightOf="@+id/goToYearTitle"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/goToYearText" />
</android.support.constraint.ConstraintLayout>