<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/resultbackground">

    <ImageView
        android:id="@+id/moviePoster"
        android:layout_width="@dimen/ImageWidth"
        android:layout_height="@dimen/ImageHeight"
        android:src="@drawable/no_poster"

        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"

        android:contentDescription="Poster"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintVertical_bias="0.27" />

    <TextView
        android:id="@+id/movieTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/TitleSize"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:text="Batman : Tha Dark Knight"
        android:paddingStart="0dp"
        android:paddingEnd="8dp"

        app:layout_constraintLeft_toRightOf="@+id/moviePoster"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.32"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />


    <TextView
        android:id="@+id/categories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/CategorySize"
        android:textColor="@color/colorPrimary"
        android:text="Action, Drama, Adventure"
        android:paddingStart="0dp"
        android:paddingEnd="8dp"
        android:textStyle="italic"


        app:layout_constraintLeft_toLeftOf="@+id/releasedYear"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/releasedYear"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/releasedYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/TextSizeSmall"
        android:textColor="@color/colorPrimary"
        android:text="2010"
        android:paddingStart="0dp"
        android:paddingEnd="8dp"

        app:layout_constraintLeft_toLeftOf="@+id/movieTitle"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/movieTitle"
        />

    <TextView
        android:id="@+id/movieRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/TextSizeSmall"
        android:textColor="@color/colorPrimaryDark"
        android:text=""
        android:background="@drawable/custom_shape"
        android:gravity="center"
        android:paddingStart="0dp"
        android:paddingEnd="10dp"
        android:drawableStart="@drawable/rate_star"

        app:layout_constraintRight_toLeftOf="@+id/movieTitle"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/moviePoster"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/moviePoster"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginLeft="8dp"
        android:layout_marginTop="-23dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="76dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieRate">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/about"
                android:textColor="@color/colorPrimary"

                android:textSize="@dimen/TextSize"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

            <TextView
                android:id="@+id/aboutDisc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="0dp"
                android:paddingEnd="8dp"
                android:text=""
                android:textColor="@color/colorPrimary"

                android:textSize="@dimen/TextSizeSmall"
                app:layout_constraintLeft_toLeftOf="@+id/about"
                app:layout_constraintTop_toBottomOf="@+id/about" />

            <TextView
                android:id="@+id/director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/director"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/TextSize"

                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@+id/aboutDisc"
                app:layout_constraintTop_toBottomOf="@+id/aboutDisc" />

            <TextView
                android:id="@+id/directorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="0dp"
                android:paddingEnd="8dp"
                android:text=""
                android:textColor="@color/colorPrimary"

                android:textSize="@dimen/TextSizeSmall"
                app:layout_constraintLeft_toLeftOf="@+id/director"
                app:layout_constraintTop_toBottomOf="@+id/director" />

            <TextView
                android:id="@+id/cast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/cast"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/TextSize"

                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@+id/directorName"
                app:layout_constraintTop_toBottomOf="@+id/directorName" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/castRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="@+id/cast"
                app:layout_constraintTop_toBottomOf="@+id/cast">


            </android.support.v7.widget.RecyclerView>


        </android.support.constraint.ConstraintLayout>

    </ScrollView>


    <ImageButton
        android:id="@+id/back_button_category_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_icon"
        android:background="?android:selectableItemBackground"

        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:menu="@menu/bottom_nav_menu"
        app:itemTextColor="@color/colorPrimaryDark"
        app:itemIconTint="@color/colorPrimaryDark"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>



</android.support.constraint.ConstraintLayout>